--- a/my_robot/maps/my_map.yaml
+++ b/my_robot/maps/my_map.yaml
@@ -2,5 +2,5 @@ image: map.pgm
 resolution: 0.01
 origin: [-20.0, -20.0, 0.0]
 occupied_thresh: 0.65
-fresh_thresh: 0.196
+free_thresh: 0.196
 negate: 0
